feat: release suppport cgroupv2
Signed-off-by: Ash <root@viper.run>